<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/light"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="24dp"
        android:text="@string/light_default"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/gyroscopic"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:textSize="24dp"
        android:text="@string/gyroscopic"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light"/>

    <LinearLayout
        android:id="@+id/theta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/gyroscopic"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/x"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/x"
            android:textSize="24dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/y"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:text="@string/y"
            android:gravity="center"/>

        <TextView
            android:id="@+id/z"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:text="@string/z"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/getGPSBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="48dp"
        android:text="GPS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theta"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,NotSibling" />

    <LinearLayout
        android:id="@+id/GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/getGPSBtn"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/Lat"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/lat"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/Long"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:text="@string/lon"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>